# Znap

./: .gitignore  .pre-commit-config.yaml  README.md  aura_cmd.sh  aura_fns  custom_terminal  main.cpp  pyproject.toml
znap/: main.py  utils.py
znap/commands/: git.py
