[project]
name = "znap"
version = "0.1.0"
description = "A faster and prettier way to use CLI commands"
authors = [
    {name = "dizziedbliss"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
